--- a/examenUf3/package.json
+++ b/examenUf3/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --config /workspaces/examenUf3m6/examenUf3/vite.config.js",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
